--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src= ../images/background.png alt="Background Image" class="background-img">
+        <img src= images/background.png alt="Background Image" class="background-img">
         <h1>Happy Birthday!</h1>
         <div id="countdown">
             <div class="date">
