--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div>Seconds</div>
             </div>
         </div>
-        <button id="countdown-btn" onclick="window.location.href='home.html';" >Go to Surprise!</button>
+        <button id="countdown-btn" onclick="window.location.href='home.html';" disabled> Go to Surprise!</button>
     </div>
 
     <script src="countdown.js"></script>
