new things too add

--- a/daily.html
+++ b/daily.html
@@ -4,33 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Login Reward</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="daily.css">
 </head>
 <body>
 
     <header>
+        <div class="logo">
+            <img src="images/logo.png" alt="Babihub Logo"> <!-- Update the path as needed -->
+        </div>
         <nav>
             <ul>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="video.html">Video</a></li>
                 <li><a href="letter.html">Letter</a></li>
                 <li><a href="daily.html">Daily Login Reward</a></li>
             </ul>
         </nav>
     </header>
-
-    <h1>Daily Login Reward</h1>
-    <div class="login-reward">
-        <div class="reward-item">
-            <span>Day 1 Reward: A sweet message ❤️</span>
-            <button onclick="alert('You unlocked: A sweet message!')">Claim</button>
-        </div>
-        <div class="reward-item">
-            <span>Day 2 Reward: A cute picture 📸</span>
-            <button onclick="alert('You unlocked: A cute picture!')">Claim</button>
-        </div>
-        <div class="reward-item">
-            <span>Day 3 Reward: A special surprise 🎁</span>
-            <button onclick="alert('You unlocked: A special surprise!')">Claim</button>
+    <img src="images/background1.png" alt="Cute Background" class="background-img"> 
+    <div class="container">
+        <h1>Daily Login Reward</h1>
+        <div class="login-reward">
+            <div class="reward-item">
+                <span>Day 1 Reward: A sweet message ❤️</span>
+                <button onclick="alert('You unlocked: A sweet message!')">Claim</button>
+            </div>
+            <div class="reward-item">
+                <span>Day 2 Reward: A cute picture 📸</span>
+                <button onclick="alert('You unlocked: A cute picture!')">Claim</button>
+            </div>
+            <div class="reward-item">
+                <span>Day 3 Reward: A special surprise 🎁</span>
+                <button onclick="alert('You unlocked: A special surprise!')">Claim</button>
+            </div>
         </div>
     </div>
 
