--- a/home.html
+++ b/home.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
+    
     <header>
+        <div class="logo">
+            <img src="images/logo.png" alt="Babihub Logo"> <!-- Update the path as needed -->
+        </div>
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
@@ -18,25 +22,39 @@
         </nav>
     </header>
 
+    <img src="images/background1.png" alt="Cute Background" class="background-img"> 
     <div class="container">
-        <h1>Welcome to Your Birthday Celebration!</h1>
-        <p>This special page is designed just for you. Here’s what you can explore:</p>
-        <div class="link-section">
-            <div class="link-item">
-                <h2>🎥 Video Surprise</h2>
-                <p>Click here to watch a special birthday video created just for you!</p>
-                <a href="video.html" class="button">Watch Video</a>
+        <div class="left-content">
+            <h1>Welcome to babihub!</h1>
+            <p>Special website for my one and only babi</p>
+            
+            <div class="link-section">
+                <div class="link-item">
+                    <h2>🎥 Video Surprise</h2>
+                    <p>I made a video for you like a vlog thing expressing my love for you nyehehe</p>
+                    <a href="video.html" class="button">Watch Video</a>
+                </div>
+                <div class="link-item">
+                    <h2>💌 Letter of Love</h2>
+                    <p>My personal letter for your birthday because I am cool and nonchalant</p>
+                    <a href="letter.html" class="button">Read Letter</a>
+                </div>
+                <div class="link-item">
+                    <h2>🎁 Daily Plannned Activities</h2>
+                    <p>During your Birthday week I planned activities we can do or things I can do for you during your Birhtday!</p>
+                    <a href="daily.html" class="button">Dalies</a>
+                </div>
             </div>
-            <div class="link-item">
-                <h2💌 Letter of Love</h2>
-                <p>A heartfelt letter filled with love and warm wishes awaits you!</p>
-                <a href="letter.html" class="button">Read Letter</a>
-            </div>
-            <div class="link-item">
-                <h2>🎁 Daily Login Rewards</h2>
-                <p>Join the fun and unlock surprises every day leading up to your birthday!</p>
-                <a href="daily.html" class="button">Claim Rewards</a>
-            </div>
+        </div>
+
+        <div class="right-content">
+            <h2>I LOVE YOU!</h2>
+            <h2> </h2>
+            <h2> </h2>
+            <h3> </h3>
+            <h3> </h3>
+            <h3> </h3>
+            <img src="images/pic.jpg" alt="Our Picture" class="us-picture">
         </div>
     </div>
 </body>
