--- a/letter.html
+++ b/letter.html
@@ -3,27 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Letter for You</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>Letter of Love</title>
+    <link rel="stylesheet" href="letter.css">
 </head>
 <body>
 
     <header>
+        <div class="logo">
+            <img src="images/logo.png" alt="Babihub Logo"> <!-- Update the path as needed -->
+        </div>
         <nav>
             <ul>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="video.html">Video</a></li>
                 <li><a href="letter.html">Letter</a></li>
                 <li><a href="daily.html">Daily Login Reward</a></li>
             </ul>
         </nav>
     </header>
+    <img src="images/background1.png" alt="Cute Background" class="background-img">
+    <div class="container">
+        <!-- Spotify Player at the top -->
+        <div class="spotify-player">
+            <h2>Dedicated this song to you 🎶</h2>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5ANZkftsPAO0yhynm9jwlU?utm_source=generator" width="300" height="150" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
 
-    <h1>A Letter for You</h1>
-    <div class="letter-section">
-        <p>Dear [Girlfriend's Name],</p>
-        <p>[Here you can add your heartfelt letter!]</p>
-        <p>Happy birthday once again! I love you so much. ❤️</p>
-        <p>Love, [Your Name]</p>
+        <h1>My Personal Letter for You</h1>
+        <div class="letter-content">
+            <p>Dear Babi,</p>
+            <p>I wish you the MOST HAPPIEST BIRTHDAY MY BABIII!!!! I LOVE YOU!! I LOVE YOU SO MUCH!!! You are turning 22 by this day and I’m so proud you made it this far AHHAHAHAHHA but anyways I love you so much!! By the time you’re reading this it is already November 5, 2024 and it was the day you came out of your mother’s womb (and I’m glad that happened AHHAHAH).  As you are reading this I might be by your side giggling and cringing to my awful writing because I don’t write letters as much but for you I’ll always make exceptions hehehehe. I love you and I’m really glad we made it this far into our relationship, we might have kept on fighting the whole October but doesn’t change how much I love you, you mean so much to me, you make me feel safe and I feel so comfortable went I’m around you. You make it feel like everything is fine and dandy when I’m with you and that is what I truly desire in my life, just you and me and your huge collection of crocs, mofusands and those creepy ahh LabuLabu things and a small apartment and with dogs and cats soon. I just love you and I hope soon enough I get to kneel in one knee and say those words “will you marry me?” hehehe I know Its so cringy but I just freaking love you.</p>
+            <p> I can’t live without you pls im begging you don’t leave me AHHAHHAHAH since the day I met you in bumble (thank god I downloaded that) you have been in my mind rent free like 10371093819083th times already and I’m glad that I can’t keep you out of my mind, you’ve been my motivation to work hard and get a job so we can have a peaceful life, I wish we can keep growing old together be there in all of our birthday, I wanna try new things and just do everything with you, I am just glad that you are alive and being with you makes me so happy. Anyways you wanna know when I am making this letter? Its actually 12:52 as I am still writing this letter and guess what day? That’s right the October 24, 2024 rn you are sleeping at your tita’s slept to early because someone drank alittle too much HAHAHHAHA. I love you and as I said I’ll keep trying and trying for you, I know you wanted efforts and everything and I will provide all of that because my babi deserver everything and I will make sure that I will always give that too you because I genuinely and always will love you forever. Wanna count how many times I said I love you in this letter? Well I don’t really know the exact numbers but I love you I love you! Iove you so much!! I freaking love you! Mahal kita! Mwamwma I love youuu I loveyouu so much  SHOWER YOU WITH ALL MY FREAKING LOVE BECAUSE I LOVE YOU AND CHERISH YOU, YOU HOT SEXY AHH BABII you mean the absolute world to me and ill make sure that you will have the best birthday you ever had, I mean I can’t top your debut but this will the best birthday of with me. I work really hard on this website and I hope you really liked it because I did so much trial and error made custom logos and gotta make it your favorite, made a meaningful video because I thought that this website wasn’t enough but I am sure you will enjoy this birthday week.</p>
+            <p> I love you I bet as of now I am hugging you and smooching you at your back while you read this because I want you feel so much love and maybe we just finished having sex or finished drinking with your friends anyways. I just want to wish you a happy birthday because again I love you and I want to make you the happiest birthday girl ever in her bday I love you!!!!! You also make me the most happiest man in the world, I know I can’t also top your letter. Your letter for my birthday was the most sweetest gift I ever had. I love you did I mention that already? I love you. I hope by this time I would also have given you flowers but tight on money again but ill make bawi for you gifts when I have the money na. Enjoy the rest of day or maybe night depends if we really opened this website on 00:00 but I love you, Kraven in the future treat her right and follow the guide lines of the daily Planned Activites I love you babii!!!!</p>
+            <p>I hope this day brings you as much joy as you bring to my life.</p>
+            <p>With all my love,</p>
+            <p>Your quav❤️</p>
+        </div>
     </div>
 
 </body>
