--- a/home.html
+++ b/home.html
@@ -30,9 +30,9 @@
             
             <div class="link-section">
                 <div class="link-item">
-                    <h2>🎥 Video Surprise</h2>
-                    <p>I made a video for you like a vlog thing expressing my love for you nyehehe</p>
-                    <a href="video.html" class="button">Watch Video</a>
+                    <h2>🎥 Mini Digital Collage!</h2>
+                    <p>Eventful things we did together!</p>
+                    <a href="video.html" class="button">Look</a>
                 </div>
                 <div class="link-item">
                     <h2>💌 Letter of Love</h2>
