--- a/scrapbook.html
+++ b/scrapbook.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="video.html">Video</a></li>
+                <li><a href="scrapbook.htmls">Scrapbook</a></li>
                 <li><a href="letter.html">Letter</a></li>
                 <li><a href="daily.html">Daily Login Reward</a></li>
             </ul>
